@@ -275,6 +275,7 @@ enum ride_type_flags : uint64_t
     RIDE_TYPE_FLAG_IS_SUSPENDED = (1ULL << 50),
     RIDE_TYPE_FLAG_HAS_LANDSCAPE_DOORS = (1ULL << 51),
     RIDE_TYPE_FLAG_UP_INCLINE_REQUIRES_LIFT = (1ULL << 52),
+    RIDE_TYPE_FLAG_PEEP_CAN_USE_UMBRELLA = (1ULL << 53),
 };
 
 // Set on ride types that have a main colour, additional colour and support colour.
